syntax = "proto3";
package order;
option go_package = "github.com/southern-martin/ecommerce/proto/gen/order";

import "common/common.proto";

service OrderService {
    rpc HealthCheck(common.Empty) returns (common.Empty);
}
